# Arcturus

./: .env.example  .gitignore  README.md  alembic.ini  api.py  docker-compose.tests.yml  docker-compose.yml  p15_gateway_runtime.py  package-lock.json  package.json  pyproject.toml  pytest.ini  wake_word.py
.github/workflows/: p09-bazaar-marketplace.yml  project-gates.yml  sdk.yml
CAPSTONE/: current_features.md
CAPSTONE/project_charters/: P01_DELIVERY_README.md  P03_DELIVERY_README.md  P04_visual_explainer_integration.md  P05_DELIVERY_README.md  P07_DELIVERY_README.md  P07_Wake_Word_DELIVERY_README.md  P08_DELIVERY_README.md  P09_DELIVERY_README.md  P11_DELIVERY_README.md  P11_DETAILED_ARCHITECTURE.md  P11_NEO4J_KNOWLEDGE_GRAPH_DESIGN.md  P11_PHASE4_SYNC_ENGINE_DESIGN.md  P11_PHASEB_EPISODIC_NOTES_DESIGN.md  P11_PHASEC_BM25_HYBRID_SEARCH_DESIGN.md  P11_SETUP_GUIDE.md  P11_UNIFIED_REFERENCE.md  P11_mnemo_SETUP_GUIDE.md  P14_ARCHITECTURE_AND_PLAN.md  P14_DELIVERY_README.md  P14_STATUS_AND_PICKUP.md  P15_DELIVERY_README.md  p11_unified_extraction_design.md
agents/: base_agent.py  department_loader.py  manager.py  protocol.py  swarm_runner.py  worker.py
agents/departments/: business.yaml  content.yaml  engineering.yaml  research.yaml
alembic/: env.py
alembic/versions/: 606153f631a7_initial_user_model_migration.py  d9a7dd0af60e_add_first_name_and_last_name.py
apps/app-1767353830068/: ui.json
apps/app-1770718543283/: ui.json
canvas/: runtime.py  schema.py
channels/: __init__.py  base.py  channels_setup_readme.md  discord.py  googlechat.py  imessage.py  matrix.py  mobile.py  signal.py  slack.py  teams.py  telegram.py  webchat.py  whatsapp.py
channels/setup_docs/: discord.md  googlechat.md  imessage.md  matrix.md  signal.md  slack.md  teams.md  telegram.md  webchat.md  whatsapp.md
ci/: run_project_gate.sh
config/: agent_config.yaml  channels.yaml  database.py  feature_flags.json  models.json  profiles.yaml  qdrant_config.yaml  settings.defaults.json  settings.json  settings_loader.py  trust_policy.yaml
content/: oracle_client.py  page_generator.py  schema.md
content/section_agents/: __init__.py  comparison_agent.py  data_agent.py  detail_agent.py  overview_agent.py  source_agent.py
content/templates/: __init__.py  product_comparison.yaml  topic_overview.yaml
core/: episodic_memory.py  event_bus.py  json_parser.py  loop.py  model_manager.py  reasoning.py  scheduler.py  ui_generator.py  visual_explainer_service.py
core/auth/: context.py  middleware.py  security.py
core/gateway_services/: __init__.py  embeddings_service.py  exceptions.py  forge_adapter.py  memory_service.py  oracle_adapter.py  search_service.py  spark_adapter.py
core/sandbox/: executor.py
core/schemas/: studio_schema.py
core/skills/: base.py  manager.py  registry.json
core/studio/: orchestrator.py  (+3 more)
docs/: forge-studio.md  forge_phase3_implementation_plan.md
gateway/: __init__.py  bus.py  envelope.py  formatter.py  router.py
gateway_api/: __init__.py  auth.py  contracts.py  idempotency.py  integration_tracing.py  key_store.py  metering.py  rate_limiter.py  storage_utils.py  usage_governance.py  webhooks.py
marketplace/: abuse.py  admin.py  bridge.py  installer.py  integrity.py  moderation.py  registry.py  sandbox.py  signing.py  skill_base.py  trust.py  version_manager.py
mcp_servers/: server_memory.py  server_rag.py
memory/: context.py  entity_extractor.py  episodic.py  fact_field_registry.py  knowledge_graph.py  lifecycle.py  mem0_store.py  memory_retriever.py  mnemo_config.py  neo4j_preferences_adapter.py  qdrant_config.py  rag_store.py  space_constants.py  sparse_embedding.py  sync_config.py  unified_extraction_schema.py  user_id.py  vector_store.py
ops/: __init__.py  health.py
platform-frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
prompts/: entity_extraction.md  ide_agent_prompt.md
remme/: bootstrap.py  extractor.py  utils.py
routers/: admin.py  auth.py  canvas.py  chat.py  cron.py  graph.py  ide_agent.py  marketplace.py  nexus.py  optimizer.py  pages.py  rag.py  remme.py  runs.py  studio.py  swarm.py  sync.py  visual_explainer.py  voice.py
scripts/: benchmark_realtime_indexing.py  benchmark_retrieval.py  migrate_all_memories.py  migrate_episodic_to_qdrant.py  migrate_faiss_to_qdrant.py  migrate_hubs_to_neo4j.py  migrate_memories_to_neo4j.py  migrate_rag_faiss_to_qdrant.py  run_p11_automation_tests.sh  test_qdrant_setup.py
session/: README.md  __init__.py  capture.py  checkpoint.py  rewind.py  schema.py
shared/: state.py
signal_bridge/: README.md  app.py
tests/: conftest.py  test_discord_roundtrip.py  test_episodic_retrieval.py  test_get_run_output.py  test_googlechat_roundtrip.py  test_group_activation.py  test_imessage_roundtrip.py  test_matrix_roundtrip.py  test_media_send.py  test_message_bus.py  test_message_formatter.py  test_p01_latency.py  test_preplan_retrieval.py  test_runs_agent_factory.py  test_semantic_injection.py  test_signal_roundtrip.py  test_slack_roundtrip.py  test_studio_documents_exporter_docx.py  test_studio_editing_patch_apply.py  test_studio_editing_planner.py  test_studio_export_router.py  test_studio_orchestrator.py  test_studio_schema.py  test_studio_sheets_exporter_xlsx.py  test_studio_slides_charts.py  test_studio_slides_exporter.py  test_studio_slides_generator.py  test_studio_slides_layout.py  test_studio_slides_notes.py  test_studio_slides_theme_variants.py  test_studio_slides_themes.py  test_studio_slides_types.py  test_studio_slides_validator.py  test_teams_roundtrip.py  test_typing_indicators.py  test_webchat_roundtrip.py  test_webchat_sse.py  test_whatsapp_roundtrip.py
voice/: agent.py  audio_input.py  barge_in.py  config.py  deepgram_stt_service.py  dictation_service.py  intent_gate.py  openwakeword_engine.py  orchestrator.py  piper_tts_service.py  pocketsphinx_engine.py  porcupine_engine.py  session_logger.py  stt_service.py  text_refiner.py  tts_service.py  voice_wake_service.py  wake_engine.py
whatsapp_bridge/: README.md  index.js  package-lock.json  package.json
(+296 files in other folders)
